--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content=" light dark">
+    <link rel="stylesheet" href="./styles/variables.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/light.css">
+    <link rel="stylesheet" href="./styles/dark.css">
+    <link rel="icon" href="./images/favicon.ico">
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
     <title>Сложно сосредоточиться</title>
   </head>
   <body class="page">
@@ -35,6 +42,13 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <h1 class="title">
+        no 
+focus
+      </h1>
+<p class="description"></p>
+    </main>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
