--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </head>
   <body class="page">
     <header class="header decorated-zone">
+      <div class="decoration-element"></div>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -46,72 +47,169 @@
       </nav>
     </header>
     <main>
-      <div class="title-description">
+      <section class="title-description">
         <h1 class="title">no focus</h1>
         <p class="description">
-          Что делать, когда не можешь делать ничего<br>
-Или почему нам так сложно сконцентрироваться, особенно когда очень надо
+          Что делать, когда не можешь делать ничего<br />
+          Или почему нам так сложно сконцентрироваться, особенно когда очень
+          надо
         </p>
-      </div>
+      </section>
       <section class="constant-layout">
         <h2 class="question">Почему сосредоточиться так сложно</h2>
         <div class="constant-layout__answer">
           <h3 class="main__point">Многозадачность</h3>
-          <p class="text">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи выяснили, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
+          <p class="text">
+            Особенно сложно сосредоточиться, когда задач много и все они —
+            важные. Где же легендарная многозадачность, когда она так нужна вам
+            (и всем нанимающим менеджерам этого мира)? А дело в том, что её
+            просто не существует. Исследователи выяснили, что мозгу тяжело
+            концентрироваться даже на двух делах одновременно. А когда в поле
+            внимания попадает несколько важных задач, организм паникует и
+            выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы
+            работаем невнимательно: ошибаемся и быстро устаём.
+          </p>
         </div>
         <div class="constant-layout__answer">
           <h3 class="main__point">Дофамин</h3>
-          <p class="text">С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</p>
+          <p class="text">
+            С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
+            невозможности сосредоточиться замешана и полная противоположность
+            стрессу — дофамин. Это вещество участвует в системе вознаграждения
+            мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на
+            что-то более «приятное» для мозгов. Например, смотрим лайки в
+            соцсетях. В это время и выделяется дофамин — и мы чувствуем
+            удовольствие. Получается замкнутый круг: чем больше отвлекаешься,
+            тем больше удовольствия получаешь.
+          </p>
         </div>
       </section>
       <section class="changable-layout">
         <h2 class="question">Что снижает концентрацию внимания?</h2>
         <div class="changable-layout__answer">
           <h3 class="main__point">Многозадачность</h3>
-          <p class="text">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
+          <p class="text">
+            Как концентрация может снижаться из-за… концентрации? Любая
+            стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш
+            мозг постоянно «сканировать» окружающую среду на предмет опасности.
+            Например, читать новости вместо работы. Но быть собранными всё время
+            — невозможно. Концентрация — мышца, и она может не выдержать, если
+            не давать ей отдохнуть.
+          </p>
         </div>
         <div class="changable-layout__answer">
           <h3 class="main__point">Еда</h3>
-          <p class="text">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.</p>
+          <p class="text">
+            «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+            доставляют в мозг энергию и помогают ему лучше работать. Но уходит
+            эта энергия также быстро, как и приходит. А мы в результате попадаем
+            на «углеводные качели»: как только действие «быстрых углеводов»
+            заканчивается, мы чувствуем усталость и сонливость. И хотим ещё
+            больше быстрых углеводов.
+          </p>
         </div>
         <div class="changable-layout__answer">
           <h3 class="main__point">Гаджеты</h3>
-          <p class="text">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.</p>
+          <p class="text">
+            Да-да, это та самая ситуация, когда на экране ноутбука — код, в
+            наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными
+            утятами. В результате мозг пытается переключиться с одной задачи на
+            другую — и просто не может. А чтобы вернуться к состоянию полной
+            концентрации, человеку в среднем нужно 20 минут. Вот и получается,
+            что чем больше времени мы проводим в гаджетах, тем больше времени
+            затем нужно, чтобы вернуться к работе.
+          </p>
         </div>
       </section>
       <section class="constant-layout">
-        <h2 class="question">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
+        <h2 class="question">
+          Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
+          секунд)
+        </h2>
         <div class="constant-layout__answer">
-          <h3 class="main__point">5 простых (на самом деле не очень) советов</h3>
+          <h3 class="main__point">
+            5 простых (на самом деле не очень) советов
+          </h3>
           <h2 class="advise">Представьте небо и облака</h2>
-          <p class="text">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
+          <p class="text">
+            Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
+            успокоиться. Ведь часто именно тревожные мысли о сложных задачах как
+            раз и мешают эти сложные задачи делать. В такие моменты можно
+            закрыть глаза и представить, что чистое небо — это вы, а облака —
+            тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
+            где-то там, за тучами, и никуда не денется. Это упражнение поможет
+            вернуться в настоящий момент, а не волноваться о потенциальных
+            проблемах из будущего.
+          </p>
         </div>
         <div class="constant-layout__answer">
           <h2 class="advise">Включите музыку</h2>
-          <p class="text">Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.</p>
+          <p class="text">
+            Но не любую, и не любимую. Любимая может быть связана с сильными
+            положительными эмоциями, которые тоже очень сильно отвлекают.
+            Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
+            попробовать включить плейлист в «белым шумом» или нейромузыкой.
+          </p>
         </div>
         <div class="constant-layout__answer">
           <h2 class="advise">Прогуляйтесь</h2>
-          <p class="text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент показал, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
+          <p class="text">
+            Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+            показал, что созерцание природы повышает концентрацию, в то время
+            как после просмотра городских пейзажей она наоборот понижается.
+            Можно совместить прогулку с физическими упражнениями или бегом — так
+            в мозг поступит ещё больше кислорода и он будет лучше работать. Но и
+            простая двадцатиминутная прогулка — тоже отличный вариант.
+          </p>
         </div>
         <div class="constant-layout__answer">
           <h2 class="advise">Хорошо ешьте</h2>
-          <p class="text">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
+          <p class="text">
+            Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+            которые препятствуют резким скачкам сахара в крови. Например, с
+            высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица,
+            фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
+          </p>
         </div>
         <div class="constant-layout__answer">
           <h2 class="advise">Читайте</h2>
-          <p class="text">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.</p>
+          <p class="text">
+            Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
+            прочитать пост в соцсети, достаточно нескольких минут или даже
+            секунд. А вот интересная книга способна затянуть и на несколько
+            часов и круто тренирует направленное внимание.
+          </p>
         </div>
       </section>
-      <h2  class="main__point">А можно в картинках?</h2>
+      <h2 class="main__point">А можно в картинках?</h2>
       <section class="pictures">
-        <img class="pictures picture" src="./images/sunset.png" alt="Картинка в фиоетовых тонах с горами и закатом" >
-        <img class="pictures picture" src="./images/ice-cream.png" alt="Мороженное" >
-        <img class="pictures picture" src="./images/tape.png" alt="Музыкальная кассета и окошко плейлиста" >
-        <img class="pictures picture" src="./images/books.png" alt="Стопка книг" >
-        <img class="pictures picture" src="./images/street.png" alt="Картинка в фиоетовых тонах с домами и улицей" >
+        <img
+          class="pictures picture"
+          src="./images/sunset.png"
+          alt="Картинка в фиоетовых тонах с горами и закатом"
+        />
+        <img
+          class="pictures picture"
+          src="./images/ice-cream.png"
+          alt="Мороженное"
+        />
+        <img
+          class="pictures picture"
+          src="./images/tape.png"
+          alt="Музыкальная кассета и окошко плейлиста"
+        />
+        <img
+          class="pictures picture"
+          src="./images/books.png"
+          alt="Стопка книг"
+        />
+        <img
+          class="pictures picture"
+          src="./images/street.png"
+          alt="Картинка в фиоетовых тонах с домами и улицей"
+        />
       </section>
     </main>
-     <script src="./scripts/script.js"></script> 
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
