--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body class="page">
     <header class="header decorated-zone">
-      <div class="decoration-element"></div>
+      <div class="decoration-element">22</div>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -45,16 +45,15 @@
           </li>
         </ul>
       </nav>
-    </header>
-    <main>
-      <section class="title-description">
         <h1 class="title">no focus</h1>
         <p class="description">
-          Что делать, когда не можешь делать ничего<br />
+          Что делать, когда не можешь делать ничего<br>
           Или почему нам так сложно сконцентрироваться, особенно когда очень
           надо
         </p>
-      </section>
+    </header>
+    <main>
+      
       <section class="constant-layout">
         <h2 class="question">Почему сосредоточиться так сложно</h2>
         <div class="constant-layout__answer">
