--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           надо
         </p>
     </header>
-    <main>
+    <main class="main">
       
       <section class="constant-layout">
         <h2 class="question">Почему сосредоточиться так сложно</h2>
@@ -126,10 +126,10 @@
           секунд)
         </h2>
         <div class="constant-layout__answer">
-          <h3 class="main__point">
+          <h3 class="advise">
             5 простых (на самом деле не очень) советов
           </h3>
-          <h2 class="advise">Представьте небо и облака</h2>
+          <h2 class="main__point normal-text">Представьте небо и облака</h2>
           <p class="text">
             Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
             успокоиться. Ведь часто именно тревожные мысли о сложных задачах как
@@ -142,7 +142,7 @@
           </p>
         </div>
         <div class="constant-layout__answer">
-          <h2 class="advise">Включите музыку</h2>
+          <h2 class="main__point normal-text">Включите музыку</h2>
           <p class="text">
             Но не любую, и не любимую. Любимая может быть связана с сильными
             положительными эмоциями, которые тоже очень сильно отвлекают.
@@ -151,7 +151,7 @@
           </p>
         </div>
         <div class="constant-layout__answer">
-          <h2 class="advise">Прогуляйтесь</h2>
+          <h2 class="main__point normal-text">Прогуляйтесь</h2>
           <p class="text">
             Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
             показал, что созерцание природы повышает концентрацию, в то время
@@ -162,7 +162,7 @@
           </p>
         </div>
         <div class="constant-layout__answer">
-          <h2 class="advise">Хорошо ешьте</h2>
+          <h2 class="main__point normal-text">Хорошо ешьте</h2>
           <p class="text">
             Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
             которые препятствуют резким скачкам сахара в крови. Например, с
@@ -171,7 +171,7 @@
           </p>
         </div>
         <div class="constant-layout__answer">
-          <h2 class="advise">Читайте</h2>
+          <h2 class="main__point normal-text">Читайте</h2>
           <p class="text">
             Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
             прочитать пост в соцсети, достаточно нескольких минут или даже
