create hole page

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           </p>
         </div>
       </section>
-      <h2 class="main__point">А можно в картинках?</h2>
+      <h2 class="question-and-main-point">А можно в картинках?</h2>
       <section class="pictures">
         <img
           class="pictures picture"
@@ -209,6 +209,7 @@
         />
       </section>
     </main>
+    <footer class="footer decorated-zone">focus</footer>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
