adaptiv for main2block

--- a/index.html
+++ b/index.html
@@ -45,18 +45,19 @@
           </li>
         </ul>
       </nav>
-        <h1 class="title">no focus</h1>
-        <div class="wapper-for-discription"> 
-           <p class="description">
-          Что делать, когда не можешь делать ничего<br>
+      <h1 class="title">no focus</h1>
+      <div class="wapper-for-discription">
+        <p class="description">
+          Что делать, когда не можешь делать ничего<br />
           Или почему нам так сложно сконцентрироваться, особенно когда очень
           надо
-        </p></div>
+        </p>
+      </div>
     </header>
     <main class="main">
       <section class="constant-layout">
         <h2 class="question">Почему сосредоточиться так сложно</h2>
-        <div class="constant-layout__answer">
+        <div class="constant-layout__answers">
           <h3 class="main__point">Многозадачность</h3>
           <p class="text">
             Особенно сложно сосредоточиться, когда задач много и все они —
@@ -68,7 +69,6 @@
             выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы
             работаем невнимательно: ошибаемся и быстро устаём.
           </p>
-          <div class="constant-layout__answer">
           <h3 class="main__point">Дофамин</h3>
           <p class="text">
             С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
@@ -81,7 +81,47 @@
             тем больше удовольствия получаешь.
           </p>
         </div>
+      </section>
+      <section class="changable-layout">
+        <div class="question-wraper">
+          <h2 class="question">Что снижает концентрацию внимания?</h2>
         </div>
+        <div class="changable-layout__answers">
+          <h3 class="main__point">Многозадачность</h3>
+          <p class="text">
+            Как концентрация может снижаться из-за… концентрации? Любая
+            стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш
+            мозг постоянно «сканировать» окружающую среду на предмет опасности.
+            Например, читать новости вместо работы. Но быть собранными всё время
+            — невозможно. Концентрация — мышца, и она может не выдержать, если
+            не давать ей отдохнуть.
+          </p>
+          
+          
+        </div>
+        <div class="changable-layout__answers">
+            <h3 class="main__point">Еда</h3>
+            <p class="text">
+              «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+              доставляют в мозг энергию и помогают ему лучше работать. Но уходит
+              эта энергия также быстро, как и приходит. А мы в результате
+              попадаем на «углеводные качели»: как только действие «быстрых
+              углеводов» заканчивается, мы чувствуем усталость и сонливость. И
+              хотим ещё больше быстрых углеводов.
+            </p>
+          </div>
+          <div class="changable-layout__answers">
+            <h3 class="main__point">Гаджеты</h3>
+            <p class="text">
+              Да-да, это та самая ситуация, когда на экране ноутбука — код, в
+              наушниках — подкаст, а на компьютере фоном — ещё и видео с
+              забавными утятами. В результате мозг пытается переключиться с
+              одной задачи на другую — и просто не может. А чтобы вернуться к
+              состоянию полной концентрации, человеку в среднем нужно 20 минут.
+              Вот и получается, что чем больше времени мы проводим в гаджетах,
+              тем больше времени затем нужно, чтобы вернуться к работе.
+            </p>
+          </div>
       </section>
     </main>
 
