adaptiv hole page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body class="page">
     <header class="header decorated-zone">
-      <div class="decoration-element">22</div>
+       <div class="decoration-element"></div> 
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -202,10 +202,10 @@
         </article>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer decorated-zone">
       <div class="footer__wraper">
-    <h2 class="title">focus</h2> 
-      </div> 
+        <h2 class="title">focus</h2>
+      </div>
     </footer>
     <script src="./scripts/script.js"></script>
   </body>
