fix heights of page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Сложно сосредоточиться</title>
   </head>
   <body class="page">
-    <header class="header decorated-zone">
+    <header class="header decorated-zone-top">
        <div class="decoration-element">
         REC
        </div> 
@@ -47,8 +47,8 @@
           </li>
         </ul>
       </nav>
-      <h1 class="title">no focus</h1>
-      <div class="wapper-for-discription">
+      <h1 class="title ">no focus</h1>
+      <div class="wapper-for-discription decorated-zone-bottom">
         <p class="description">
           Что делать, когда не можешь делать ничего<br />
           Или почему нам так сложно сконцентрироваться, особенно когда очень
@@ -204,7 +204,7 @@
         </article>
       </section>
     </main>
-    <footer class="footer decorated-zone">
+    <footer class="footer decorated-zone-top decorated-zone-bottom">
       <div class="footer__wraper">
         <h2 class="title">focus</h2>
       </div>
