--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
   </head>
   <body class="page">
     <header class="header decorated-zone">
-       <div class="decoration-element">
-        REC
-       </div> 
+      <div class="decoration-element">REC</div>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -65,7 +63,8 @@
             Особенно сложно сосредоточиться, когда задач много и все они —
             важные. Где же легендарная многозадачность, когда она так нужна вам
             (и всем нанимающим менеджерам этого мира)? А дело в том, что её
-            просто не существует. Исследователи <a href="#" class="link">выяснили</a>, что мозгу тяжело
+            просто не существует. Исследователи
+            <a href="#" class="link">выяснили</a>, что мозгу тяжело
             концентрироваться даже на двух делах одновременно. А когда в поле
             внимания попадает несколько важных задач, организм паникует и
             выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы
@@ -151,11 +150,12 @@
           <h2 class="main__point normal-text">Прогуляйтесь</h2>
           <p class="text">
             Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-           <a href="#" class="link">показал</a> , что созерцание природы повышает концентрацию, в то время
-            как после просмотра городских пейзажей она наоборот понижается.
-            Можно совместить прогулку с физическими упражнениями или бегом — так
-            в мозг поступит ещё больше кислорода и он будет лучше работать. Но и
-            простая двадцатиминутная прогулка — тоже отличный вариант.
+            <a href="#" class="link">показал</a> , что созерцание природы
+            повышает концентрацию, в то время как после просмотра городских
+            пейзажей она наоборот понижается. Можно совместить прогулку с
+            физическими упражнениями или бегом — так в мозг поступит ещё больше
+            кислорода и он будет лучше работать. Но и простая двадцатиминутная
+            прогулка — тоже отличный вариант.
           </p>
           <h2 class="main__point normal-text">Хорошо ешьте</h2>
           <p class="text">
@@ -205,7 +205,7 @@
       </section>
     </main>
     <footer class="footer decorated-zone">
-        <h2 class="title">focus</h2>
+      <h2 class="title">focus</h2>
     </footer>
     <script src="./scripts/script.js"></script>
   </body>
