--- a/index.html
+++ b/index.html
@@ -179,26 +179,31 @@
           <img
             class="pictures__item sanset"
             src="./images/sunset.png"
+            loading="lazy"
             alt="Картинка в фиоетовых тонах с горами и закатом"
           />
           <img
             class="pictures__item"
             src="./images/ice-cream.png"
+            loading="lazy"
             alt="Мороженное"
           />
           <img
             class="pictures__item"
             src="./images/tape.png"
+            loading="lazy"
             alt="Музыкальная кассета и окошко плейлиста"
           />
           <img
             class="pictures__item"
             src="./images/books.png"
+            loading="lazy"
             alt="Стопка книг"
           />
           <img
             class="pictures__item"
             src="./images/street.png"
+            loading="lazy"
             alt="Картинка в фиоетовых тонах с домами и улицей"
           />
         </article>
