Fix review issues

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body class="page">
     <header class="header decorated-zone">
-      <div class="decoration-element">REC</div>
+      <div class="decoration-element" aria-hidden="true">REC</div>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -84,9 +84,7 @@
         </article>
       </section>
       <section class="changable-layout">
-        <div class="question-wraper">
-          <h2 class="question">Что снижает концентрацию внимания?</h2>
-        </div>
+          <h2 class="question question-wraper">Что снижает концентрацию внимания?</h2>
         <article class="changable-layout__answers">
           <h3 class="main__point">Многозадачность</h3>
           <p class="text">
@@ -128,8 +126,8 @@
           секунд)
         </h2>
         <article class="constant-layout__answers">
-          <h3 class="advise">5 простых (на самом деле не очень) советов</h3>
-          <h2 class="main__point normal-text">Представьте небо и облака</h2>
+          <h2 class="advise">5 простых (на самом деле не очень) советов</h2>
+          <h3 class="main__point normal-text">Представьте небо и облака</h3>
           <p class="text">
             Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
             успокоиться. Ведь часто именно тревожные мысли о сложных задачах как
@@ -140,7 +138,7 @@
             вернуться в настоящий момент, а не волноваться о потенциальных
             проблемах из будущего.
           </p>
-          <h2 class="main__point normal-text">Включите музыку</h2>
+          <h3 class="main__point normal-text">Включите музыку</h3>
           <p class="text">
             Но не любую, и не любимую. Любимая может быть связана с сильными
             положительными эмоциями, которые тоже очень сильно отвлекают.
@@ -157,14 +155,14 @@
             кислорода и он будет лучше работать. Но и простая двадцатиминутная
             прогулка — тоже отличный вариант.
           </p>
-          <h2 class="main__point normal-text">Хорошо ешьте</h2>
+          <h3 class="main__point normal-text">Хорошо ешьте</h3>
           <p class="text">
             Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
             которые препятствуют резким скачкам сахара в крови. Например, с
             высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица,
             фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
           </p>
-          <h2 class="main__point normal-text">Читайте</h2>
+          <h3 class="main__point normal-text">Читайте</h3>
           <p class="text">
             Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
             прочитать пост в соцсети, достаточно нескольких минут или даже
@@ -183,13 +181,13 @@
             alt="Картинка в фиоетовых тонах с горами и закатом"
           />
           <img
-            class="pictures__item"
+            class="pictures__item pictures__item-vertical"
             src="./images/ice-cream.png"
             loading="lazy"
             alt="Мороженное"
           />
           <img
-            class="pictures__item"
+            class="pictures__item pictures__item-vertical"
             src="./images/tape.png"
             loading="lazy"
             alt="Музыкальная кассета и окошко плейлиста"
@@ -210,7 +208,7 @@
       </section>
     </main>
     <footer class="footer decorated-zone">
-      <h2 class="title">focus</h2>
+      <h1 class="title">focus</h1>
     </footer>
     <script src="./scripts/script.js"></script>
   </body>
