--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
     </header>
     <main class="main">
       <section class="constant-layout">
-        <h2 class="question">Почему сосредоточиться так сложно</h2>
+        <h2 class="primary-title">Почему сосредоточиться так сложно</h2>
         <article class="constant-layout__answers">
-          <h3 class="main__point">Многозадачность</h3>
+          <h3 class="secondary-title">Многозадачность</h3>
           <p class="text">
             Особенно сложно сосредоточиться, когда задач много и все они —
             важные. Где же легендарная многозадачность, когда она так нужна вам
@@ -70,7 +70,7 @@
             выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы
             работаем невнимательно: ошибаемся и быстро устаём.
           </p>
-          <h3 class="main__point">Дофамин</h3>
+          <h3 class="secondary-title">Дофамин</h3>
           <p class="text">
             С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
             невозможности сосредоточиться замешана и полная противоположность
@@ -84,9 +84,9 @@
         </article>
       </section>
       <section class="changable-layout">
-          <h2 class="question question-wraper">Что снижает концентрацию внимания?</h2>
+          <h2 class="primary-title question-wraper">Что снижает концентрацию внимания?</h2>
         <article class="changable-layout__answers">
-          <h3 class="main__point">Многозадачность</h3>
+          <h3 class="secondary-title">Многозадачность</h3>
           <p class="text">
             Как концентрация может снижаться из-за… концентрации? Любая
             стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш
@@ -97,7 +97,7 @@
           </p>
         </article>
         <article class="changable-layout__answers">
-          <h3 class="main__point">Еда</h3>
+          <h3 class="secondary-title">Еда</h3>
           <p class="text">
             «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
             доставляют в мозг энергию и помогают ему лучше работать. Но уходит
@@ -108,7 +108,7 @@
           </p>
         </article>
         <article class="changable-layout__answers">
-          <h3 class="main__point">Гаджеты</h3>
+          <h3 class="secondary-title">Гаджеты</h3>
           <p class="text">
             Да-да, это та самая ситуация, когда на экране ноутбука — код, в
             наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными
@@ -121,13 +121,13 @@
         </article>
       </section>
       <section class="constant-layout">
-        <h2 class="question">
+        <h2 class="primary-title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
         <article class="constant-layout__answers">
           <h2 class="advise">5 простых (на самом деле не очень) советов</h2>
-          <h3 class="main__point normal-text">Представьте небо и облака</h3>
+          <h3 class="secondary-title normal-text">Представьте небо и облака</h3>
           <p class="text">
             Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
             успокоиться. Ведь часто именно тревожные мысли о сложных задачах как
@@ -138,14 +138,14 @@
             вернуться в настоящий момент, а не волноваться о потенциальных
             проблемах из будущего.
           </p>
-          <h3 class="main__point normal-text">Включите музыку</h3>
+          <h3 class="secondary-title normal-text">Включите музыку</h3>
           <p class="text">
             Но не любую, и не любимую. Любимая может быть связана с сильными
             положительными эмоциями, которые тоже очень сильно отвлекают.
             Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
             попробовать включить плейлист в «белым шумом» или нейромузыкой.
           </p>
-          <h2 class="main__point normal-text">Прогуляйтесь</h2>
+          <h2 class="secondary-title normal-text">Прогуляйтесь</h2>
           <p class="text">
             Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
             <a href="#" class="link">показал</a> , что созерцание природы
@@ -155,14 +155,14 @@
             кислорода и он будет лучше работать. Но и простая двадцатиминутная
             прогулка — тоже отличный вариант.
           </p>
-          <h3 class="main__point normal-text">Хорошо ешьте</h3>
+          <h3 class="secondary-title normal-text">Хорошо ешьте</h3>
           <p class="text">
             Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
             которые препятствуют резким скачкам сахара в крови. Например, с
             высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица,
             фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
           </p>
-          <h3 class="main__point normal-text">Читайте</h3>
+          <h3 class="secondary-title normal-text">Читайте</h3>
           <p class="text">
             Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
             прочитать пост в соцсети, достаточно нескольких минут или даже
