--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       </div>
     </header>
     <main class="main">
-      <section class="constant-layout">
+      <section class="constant-layout section">
         <h2 class="primary-title">Почему сосредоточиться так сложно</h2>
-        <article class="constant-layout__answers">
+        <article class="section-content">
           <h3 class="secondary-title">Многозадачность</h3>
           <p class="text">
             Особенно сложно сосредоточиться, когда задач много и все они —
@@ -83,9 +83,9 @@
           </p>
         </article>
       </section>
-      <section class="changable-layout">
-          <h2 class="primary-title question-wraper">Что снижает концентрацию внимания?</h2>
-        <article class="changable-layout__answers">
+      <section class="changeable-layout section">
+          <h2 class="primary-title">Что снижает концентрацию внимания?</h2>
+        <article class="section-content">
           <h3 class="secondary-title">Многозадачность</h3>
           <p class="text">
             Как концентрация может снижаться из-за… концентрации? Любая
@@ -96,7 +96,7 @@
             не давать ей отдохнуть.
           </p>
         </article>
-        <article class="changable-layout__answers">
+        <article class="changeable-layout__answers">
           <h3 class="secondary-title">Еда</h3>
           <p class="text">
             «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
@@ -120,14 +120,14 @@
           </p>
         </article>
       </section>
-      <section class="constant-layout">
+      <section class="constant-layout section">
         <h2 class="primary-title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
-        <article class="constant-layout__answers">
-          <h2 class="advise">5 простых (на самом деле не очень) советов</h2>
-          <h3 class="secondary-title normal-text">Представьте небо и облака</h3>
+        <article class="section-content">
+          <h2 class="secondary-title">5 простых (на самом деле не очень) советов</h2>
+          <h3 class="minor-title">Представьте небо и облака</h3>
           <p class="text">
             Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
             успокоиться. Ведь часто именно тревожные мысли о сложных задачах как
@@ -138,14 +138,14 @@
             вернуться в настоящий момент, а не волноваться о потенциальных
             проблемах из будущего.
           </p>
-          <h3 class="secondary-title normal-text">Включите музыку</h3>
+          <h3 class="minor-title">Включите музыку</h3>
           <p class="text">
             Но не любую, и не любимую. Любимая может быть связана с сильными
             положительными эмоциями, которые тоже очень сильно отвлекают.
             Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
             попробовать включить плейлист в «белым шумом» или нейромузыкой.
           </p>
-          <h2 class="secondary-title normal-text">Прогуляйтесь</h2>
+          <h2 class="minor-title">Прогуляйтесь</h2>
           <p class="text">
             Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
             <a href="#" class="link">показал</a> , что созерцание природы
@@ -155,14 +155,14 @@
             кислорода и он будет лучше работать. Но и простая двадцатиминутная
             прогулка — тоже отличный вариант.
           </p>
-          <h3 class="secondary-title normal-text">Хорошо ешьте</h3>
+          <h3 class="minor-title">Хорошо ешьте</h3>
           <p class="text">
             Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
             которые препятствуют резким скачкам сахара в крови. Например, с
             высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица,
             фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
           </p>
-          <h3 class="secondary-title normal-text">Читайте</h3>
+          <h3 class="minor-title">Читайте</h3>
           <p class="text">
             Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
             прочитать пост в соцсети, достаточно нескольких минут или даже
@@ -171,8 +171,8 @@
           </p>
         </article>
       </section>
-      <section>
-        <h2 class="question-and-main-point">А можно в картинках?</h2>
+      <section class="section">
+        <h2 class="secondary-title">А можно в картинках?</h2>
         <article class="pictures">
           <img
             class="pictures__item sanset"
